--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://vidalab.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Data Visualization Code
+subtitle: Coding data and visualization with Javascript, d3.js, and JSON.
+author: Vida Lab
 simple_search: https://www.google.com/search
-description:
+description: Vida Lab on data and visualization
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
