--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: vidatalk
 twitter_tweet_button: true
 
 # Google +1
@@ -94,7 +94,7 @@ disqus_short_name: blogvidaio
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-43778465-5
 
 # Facebook Like
 facebook_like: false
