More links to vida.io site

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Data Visualization Code
 subtitle: Coding data and visualization with Javascript, d3.js, and JSON.
 author: Vida Lab
 simple_search: https://www.google.com/search
-description: Vida Lab coding data and visualization
+description: Vida Lab on coding data and visualization
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
